--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,12 +38,12 @@ dependencies:
   google_fonts: ^3.0.1
   intl: ^0.17.0
   get: ^4.6.5
+  font_awesome_flutter: ^10.2.1
 
 
   # Firebase
   firebase_auth: ^4.1.1
-  font_awesome_flutter: ^10.2.1
-
+  cloud_firestore: ^4.0.5
 
 dev_dependencies:
   flutter_test:
