--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,14 +35,29 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  
+  # Google Fonts
   google_fonts: ^3.0.1
+  
   intl: ^0.17.0
   get: ^4.6.5
   font_awesome_flutter: ^10.2.1
 
+  # Image Picker
+  image_picker: ^0.8.6
+
   # Firebase
   firebase_auth: ^4.1.1
   cloud_firestore: ^4.0.5
+  firebase_storage: ^11.0.5
+
+
+  # Custom packages
+  # liquid_pull_to_refresh: ^3.0.1
+  # cached_network_image: ^3.2.2
+  url_launcher: ^6.1.6
+  # image_cropper: ^3.0.1
+  # flutter_secure_storage: ^6.0.0
 
 dev_dependencies:
   flutter_test:
