--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,12 @@ dependencies:
   # liquid_pull_to_refresh: ^3.0.1
   # cached_network_image: ^3.2.2
   url_launcher: ^6.1.6
+  
+  # For creating barcode
   barcode_widget: ^2.0.3
+
+  # For Scanning QR code
+  flutter_barcode_scanner: ^2.0.0
   # image_cropper: ^3.0.1
   # flutter_secure_storage: ^6.0.0
 
