--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   firebase_storage: ^11.0.5
 
   # Custom packages
-  # liquid_pull_to_refresh: ^3.0.1
+  liquid_pull_to_refresh: ^3.0.1
   cached_network_image: ^3.2.2
   url_launcher: ^6.1.6
   
@@ -48,9 +48,6 @@ dependencies:
 
   # image_cropper: ^3.0.1
   # flutter_secure_storage: ^6.0.0
-
-  # for otp verification
-  # pinput:
 
 dev_dependencies:
   flutter_test:
@@ -77,3 +74,32 @@ flutter:
     - assets/images/
     - assets/logo/
     - assets/socials/
+    - assets/icons/
+
+  #   - images/a_dot_ham.jpeg
+
+  # An image asset can refer to one or more resolution-specific "variants", see
+  # https://flutter.dev/assets-and-images/#resolution-aware
+
+  # For details regarding adding assets from package dependencies, see
+  # https://flutter.dev/assets-and-images/#from-packages
+
+  # To add custom fonts to your application, add a fonts section here,
+  # in this "flutter" section. Each entry in this list should have a
+  # "family" key with the font family name, and a "fonts" key with a
+  # list giving the asset and other descriptors for the font. For
+  # example:
+  # fonts:
+  #   - family: Schyler
+  #     fonts:
+  #       - asset: fonts/Schyler-Regular.ttf
+  #       - asset: fonts/Schyler-Italic.ttf
+  #         style: italic
+  #   - family: Trajan Pro
+  #     fonts:
+  #       - asset: fonts/TrajanPro.ttf
+  #       - asset: fonts/TrajanPro_Bold.ttf
+  #         weight: 700
+  #
+  # For details regarding fonts from package dependencies,
+  # see https://flutter.dev/custom-fonts/#from-packages
