--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,11 @@ dependencies:
   # image_cropper: ^3.0.1
   # flutter_secure_storage: ^6.0.0
 
+  # Country code picker
+  country_picker: ^2.0.20
+  # for otp input
+  pinput: ^2.2.31
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
