Fix Mobile Verification Errors

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -113,6 +113,10 @@ dependencies {
     // Add the dependency for the Firebase Authentication library
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-auth-ktx'
+
+    // Add the dependency for the App Check library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-appcheck-playintegrity'
 }
 
 apply plugin: 'com.google.gms.google-services'
